welcome/istio/kiali/kiali-GatwewayAndVirtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /kiali
    rewrite:
      uri: /kiali
    route:
    - destination:
        host: kiali
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /jaeger
    rewrite:
      uri: /jaeger
    route:
    - destination:
        host: tracing
        port:
          number: 80
  - match:
    - uri:
        prefix: /jaeger/
    rewrite:
      uri: /
    route:
    - destination:
        host: tracing
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway
  http:
  - match:
      - uri:
          prefix: /prometheus/
    rewrite:
      uri: /prometheus/
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pgadmin4
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway
  http:
  - match:
      - uri:
          prefix: /pgadmin4
    rewrite:
      uri: /pgadmin4
    route:
    - destination:
        host: pgadmin4-service
        port:
          number: 8088
